{
    "version": 1,
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Player",
            "id": "4fd9a7f5-1e8f-4fa8-8c5c-3a20b8b11832",
            "actions": [
                {
                    "name": "shoot",
                    "type": "Button",
                    "id": "6f6a5f94-a9ba-4c60-8e0b-5e35bf4bc557",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Point",
                    "type": "Value",
                    "id": "4f79c799-7692-4b59-92cf-77e78efd10e4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "recharge",
                    "type": "Button",
                    "id": "e8343324-9873-47eb-a39e-8c31ba4b6e86",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "infinitammo",
                    "type": "Button",
                    "id": "71ecaaf8-3c98-4981-9d90-237ffb46358d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "chargePoints",
                    "type": "Button",
                    "id": "fe4fccb1-b409-4c87-a98c-b64499a3653b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenMenu",
                    "type": "Button",
                    "id": "90276c78-f772-4fe8-9ebd-f1c3ccd01385",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "escMenu",
                    "type": "Button",
                    "id": "6a04c5d9-d3b9-469d-9aff-139549eb19b8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6ec9941c-ba4c-415e-988d-c130ced9ce9e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f17f3877-7fdd-4c1b-a80f-e9202d01017b",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52e7bad0-4da8-46e7-a0ce-96dbc70a88fe",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "recharge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60d6ee05-15d5-4c1f-b558-0c859f7fc0f7",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "infinitammo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "725ca58f-0ee2-45fb-aa09-8545a5a3817b",
                    "path": "<Keyboard>/f1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "chargePoints",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3be935c0-d529-475b-82be-2b473e3c3bdc",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4029a353-6770-4fef-9095-b132577b5700",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "escMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}